# git

./: README.md  git.py  poetry.toml  pyproject.toml  shell-functions.sh
cfg/: clone.cfg
common/scripts/: clone-lite.py
git_tools/: clone.py  clone_lite.py  ls_github_repos.py  stale_branches.py
ls-github-repos/: pyproject.toml
stale-branches/: main.py  pyproject.toml
