# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-scripts"
version = "0.1.0"
authors = [{name = "Your Name"}]
dependencies = []

[project.scripts]
default-branch = "bin.default_branch:main"
filter-ref = "bin.filter_ref:main"
git-objects = "bin.git_objects:main"
ls-git-repos = "bin.ls_git_repos:main"
remote-origin-url = "bin.remote_origin_url:main"
reponame = "bin.reponame:main"
clone = "common.scripts.clone:main"
clone-lite = "common.scripts.clone_lite:main"
