# stale-branches/pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stale-branches"
version = "0.1.0"
authors = [{name = "Your Name"}]
dependencies = [
    "ruamel.yaml>=0.17.10"
]
scripts = {
    "stale-branches": "main.py"
}
